--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@ body{
     height: 600px;
     width: 400px;
     background-color: white;
+    border: black 0px solid;
     border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
+    box-shadow: 0px 10px 15px rgba(0,0,0,0.2);
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    text-align: center;
 }
 
 
@@ -41,5 +41,80 @@ body{
     align-items: center;
     font-size: 20px;
     font-weight: 600;
-    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+
 }
+
+.chat-box
+{
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.message{
+    max-width: 70%;
+    padding: 10px 15px;
+    border-radius: 20px;
+    font-size: 14px;
+    line-height: 1.4;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+} 
+
+/* Different styles for user and bot messages*/
+
+.user-chat{
+    background: #DCF8C6;
+    align-self: flex-end;
+    border-bottom-right-radius: 0px;
+    margin-left: auto;
+}
+.bot-chat{
+    background: #F1F0F0;
+    align-self: flex-start;
+    border-bottom-left-radius: 0px;
+    margin-right: auto;
+}
+
+.input-box{
+    background: whitesmoke;
+    padding: 10px;
+    align: center;
+    display: flex;
+    gap: 10px;
+}
+
+.input-box input{
+    flex: 1;
+    padding: 10px;
+    border: 1px solid lightgrey;
+    border-radius: 20px;
+    outline: none;
+    font-size: 14px;
+}
+
+/* Style for send button */
+#send-btn {
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 10px 18px;
+  font-size: 18px;
+  cursor: pointer;
+  transition:all 0.3s, transform 0.2s;
+}
+#send-btn:hover {
+  background-color: black;
+  transform: scale(0.95);
+}
+#send-btn:active {
+  transform: scale(0.9);
+}
+
+
+
+
+
